[package]
name = "json-order-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "json"] }
linked-hash-map = "0.5"